tests/ui/unexpected-struct-source.stderr
error: not expected here; the #[source] attribute belongs on a specific field
 --> $DIR/tests/ui/unexpected-struct-source.rs:4:1
  |
4 | #[source]
  | ^^^^^^^^^
